Backport: Don't crash when deleting a file using the context menu [#92676].

BUG: 92676